--- a/文章校正ツール/styles.css
+++ b/文章校正ツール/styles.css
@@ -6,8 +6,15 @@ button {
   width: 80px;
   height: 40px;
   border-radius: 5px;
+  position: absolute;
 }
 
 p {
   font-size: 15 px;
+}
+
+img {
+  width: 80px;
+  height: 80px;
+  padding-left: 90px;
 }
