--- a/文章校正ツール/styles.css
+++ b/文章校正ツール/styles.css
@@ -1,15 +1,20 @@
+body {
+  font-family: sans-serif;
+}
+
+h2 {
+  text-align: center;
+  font-size: 50px;
+}
 textarea {
   border-radius: 5px;
 }
 
-button {
+#btn {
   width: 120px;
   height: 60px;
   border-radius: 5px;
-  /* position: absolute; */
-}
-
-span {
+  text-align: center;
   font-size: 25px;
 }
 
